--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,37 @@
   height: 100vh;
 }
 
+.head{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5rem;
+  margin-top: 2rem;
+}
+
+
 body{
   margin: 0;
   background-color: whitesmoke;
 }
+.footer{
+    text-align: center;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    color: black;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 120px;
+    }
+  
+  .link{
+    color: rgba(21, 101, 192);
+  }
 
+    
 *{
   box-sizing: border-box;
 }
